create container classes to hold all the webpage contents

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             </div>
         </div>
     </section>
-    <!-- <section id="section2"> 
+    <section id="section2"> 
         <div class="container-fluid2">
-            <div class="row2">
+            <!-- <div class="row2"> 
                 <div class="col-sm-12">
                     <h3>ABOUT US</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit aut rem quisquam voluptatibus sequi beatae illo impedit, dolores quas obcaecati aperiam ratione maxime aliquam fugit! Nisi sit asperiores explicabo a adipisci iure possimus doloremque fugiat, fugit voluptate ex culpa reprehenderit repellendus quam eius accusamus corporis ullam dolore vitae sint. Deleniti architecto obcaecati odio debitis laudantium ratione asperiores a amet molestias voluptates voluptas unde ex blanditiis, assumenda nesciunt dolorem tempore repellat at nemo reiciendis. Possimus non, saepe in nobis aperiam quam.</p>
