--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>delani studio</title>
 </head>
 <body>
-    <!-- <div class="container-fluid"> 
+     <div class="container-fluid"> 
         <div class="row1">
             <img src="./assets/logo/logo.png" alt="logo">
             <h1>WELCOME</h1>
@@ -21,7 +21,7 @@
             <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
             <img src="./assets/mouse_click.png" alt="mouse-click">
         </div>
-        <div class="row2">
+        <!-- <div class="row2"> 
             <h2>ABOUT US</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti impedit quisquam nisi repudiandae, suscipit porro quos quo quas perferendis harum.</p>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea, pariatur!</p>
