--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
             <img src="./assets/portfolio/work7.jpg" alt="image">
             <img src="./assets/portfolio/work8.jpg" alt="image">
         </div>
-        <!-- <div class="row6">
+        <div class="row6">
             <h2>CONTACT US</h2>
             <form>
-                    <input type= "text" class="name" id="name" placeholder="Name...">
+                    <!-- <input type= "text" class="name" id="name" placeholder="Name...">
                 
                     <input type= "text" class="email" id="email" placeholder="E-mail..."><br><br><br><br><br>
                    
                     ]
-                    <input type="button" value="Submit">
+                    <input type="button" value="Submit"> -->
 
             </form>
         </div>
-        <div class="row7">
+        <!-- <div class="row7"> 
             <img src="./assets/social_icons/behance.png" alt="behance" >
             <img src="/assets/social_icons/dribble.png" alt="dribble" >
             <img src="./assets/social_icons/facebook.png" alt="facebook" >
