add form input types and placeholders

--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
         <div class="row6">
             <h2>CONTACT US</h2>
             <form>
-                    <!-- <input type= "text" class="name" id="name" placeholder="Name...">
+                    <input type= "text" class="name" id="name" placeholder="Name...">
                 
                     <input type= "text" class="email" id="email" placeholder="E-mail..."><br><br><br><br><br>
                    
                     ]
-                    <input type="button" value="Submit"> -->
+                    <input type="button" value="Submit">
 
             </form>
         </div>
