ft: add social icons

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
             </form>
         </div>
-        <!-- <div class="row7"> 
+        <div class="row7"> 
             <img src="./assets/social_icons/behance.png" alt="behance" >
             <img src="/assets/social_icons/dribble.png" alt="dribble" >
             <img src="./assets/social_icons/facebook.png" alt="facebook" >
@@ -84,4 +84,4 @@
     
     <script src="script.js"></script>
 </body>
-</html>  -->
+</html>  
