--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
             <img src="./assets/mouse_click.png" alt="mouse-click">
         </div>
         <div class="row2"> 
-            <h2>ABOUT US</h2>
-            <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive and agile.</p>
-            <p>Our approach unifies design, development and product management to create exceptional products.</p>
-            <p>We start each project by understanind your business goals, the user's needs and product requirements.</p>
-            <p>Then we help translate them into effective and elegant solutions.</p>
-  
+            <div class="col-md-12">
+                <h2>ABOUT US</h2>
+                <p>When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive and agile.</p>
+                <p>Our approach unifies design, development and product management to create exceptional products.</p>
+                <p>We start each project by understanind your business goals, the user's needs and product requirements.</p>
+                <p>Then we help translate them into effective and elegant solutions.</p>
+            </div>
         </div>
         <div class="row3"> 
-            <h2>SERVICES</h2>
-            <p>Before we sign a contract or a line of code, our team will spend the necessary time needed to understand your product vision</p>
-            <p>The outcome of this scoping session is proposal or high-level statement of work</p>
-            <p>Based on your requirements, we can provide a complete offering or just the pieces you need</p>
+            <div class="col-md-12">
+                <h2>SERVICES</h2>
+                <p>Before we sign a contract or a line of code, our team will spend the necessary time needed to understand your product vision</p>
+                <p>The outcome of this scoping session is proposal or high-level statement of work</p>
+                <p>Based on your requirements, we can provide a complete offering or just the pieces you need</p>
+            </div>  
         </div>
         <div class="row4"> 
             <h2>WHAT WE DO</h2>
@@ -103,7 +106,7 @@
             </div>
         </div>
         <div class="row6">
-            <h2>CONTACT US</h2>
+            <h2>CONTACT US</h2> 
             
                 <form action="https://formspree.io/f/xayvbwpo" method="post">
                   <input name="name" id="name" class="detail" type="text" placeholder="Name..." required>
@@ -117,7 +120,7 @@
         </div>
         <div class="row7"> 
             <img src="./assets/social_icons/behance.png" alt="behance" >
-            <img src="/assets/social_icons/dribble.png" alt="dribble" >
+            <img src="./assets/social_icons/dribble.png" alt="dribble" >
             <img src="./assets/social_icons/facebook.png" alt="facebook" >
             <img src="./assets/social_icons/flickr.png" alt="flickr" >
             <img src="./assets/social_icons/g_plus.png" alt="g-plus" >
